# anki-tools

./: README.md  anki.cabal
app/: AddVocab.hs  ToAnki.hs
src/: AppCSV.hs  Dictionaries.hs  ImportHypothesis.hs  TSV.hs  Tables.hs  TypeSyns.hs  Utilities.hs
