name:                anki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/anki#readme
license:             BSD3
license-file:        LICENSE
author:              Holden Lee
maintainer:          holdenl@princeton.edu
copyright:           2017 Holden Lee
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AppCSV, IOUtilities, TSV, TypeSyns, Utilities, Dictionaries, ImportHypothesis, Tables
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , cassava
                     , MissingH
                     , strict
                     , directory
                     , filepath
                     , bimap
  default-language:    Haskell2010

executable anki-exe
  hs-source-dirs:      app
  main-is:             ToAnki.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , strict
                     , directory
                     , filepath
                     , anki
  default-language:    Haskell2010

executable add-vocab-exe
  hs-source-dirs:      app
  main-is:             AddVocab.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , anki
  default-language:    Haskell2010

test-suite anki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , anki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/anki
